--- a/09-Omnifood-Optimizations/css/style.css
+++ b/09-Omnifood-Optimizations/css/style.css
@@ -87,7 +87,8 @@
     padding-top: 0;
     padding-bottom: 0;
     background-color: rgba(255, 255, 255, 0.8);
-    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(5px);
+    backdrop-filter: blur(5px);
     z-index: 999;
     box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.03);
 }
